--- a/Sites-Pages-URLs.Rmd
+++ b/Sites-Pages-URLs.Rmd
@@ -28,3 +28,9 @@ Example           <https://data.cityofchicago.org/Environment-Sustainable-Develo
 Other datasets through search on <https://data.cityofchicago.org/>
 
 Illinois data too here: <https://www.metrochicagodata.org/>
+
+## Array of things.
+
+Array of things site <https://arrayofthings.github.io/>;
+
+Locations <https://dev.socrata.com/foundry/data.cityofchicago.org/dbwu-caep>.
