--- a/Array-of-Things.Rmd
+++ b/Array-of-Things.Rmd
@@ -10,7 +10,8 @@ Ingestion of data is done
 ```{r}
 
 # Load the 'Array of things' dataset on Socrata into a DataFrame
-df <- read.csv("http://data.cityofchicago.org/resource/dbwu-caep.csv", header=FALSE)
+df <- read.csv("http://data.cityofchicago.org/resource/dbwu-caep.csv")
+
 head(df)
 ```
 
@@ -24,7 +25,17 @@ AoT_url = "http://data.cityofchicago.org/resource/dbwu-caep.csv"
 df = pd.read_csv(AoT_url)
 
 df.head()
-df.describe()
-df.shape
+#df.describe()
+#df.shape
+```
+
+Let's remove the useless columns and leave only the 6, 7, 14, 12, 15, 16, 17.
+
+```{r}
+# The list of useful columns
+useful <- c(7, 14, 15, 12, 6, 17, 16)
+
+# Useful DataFrame only has them (in a modified order)
+udf <-df[, useful]
 ```
 
