--- a/Chicago-Beach-Weather-Stations.Rmd
+++ b/Chicago-Beach-Weather-Stations.Rmd
@@ -26,7 +26,7 @@ require(RSocrata)          #load the library
 
 fdf <- read.socrata("https://data.cityofchicago.org/resource/77jv-5zb8.csv?$where=station_name=\"Foster Weather Station\"")
 
-# The other two stations are:
+# The other two stations are (if you need them):
 
 odf <- read.socrata("https://data.cityofchicago.org/resource/77jv-5zb8.csv?$where=station_name=\"Oak Street Weather Station\"")
 
